<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Question 1 start -->
            <LinearLayout
                style="@style/questionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question1"
                    style="@style/question"
                    android:text="@string/q1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q1a1"
                        style="@style/answer"
                        android:text="@string/q1a1" />

                    <RadioButton
                        android:id="@+id/q1a2"
                        style="@style/answer"
                        android:text="@string/q1a2" />

                    <RadioButton
                        android:id="@+id/q1a3"
                        style="@style/answer"
                        android:text="@string/q1a3" />
                </RadioGroup>
            </LinearLayout>
            <!--Question 1 end -->
            <!--Question 2 start -->
            <LinearLayout
                style="@style/questionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question2"
                    style="@style/question"
                    android:text="@string/q2" />

                <CheckBox
                    android:id="@+id/q2a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a1" />

                <CheckBox
                    android:id="@+id/q2a2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a2" />

                <CheckBox
                    android:id="@+id/q2a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a3" />

                <CheckBox
                    android:id="@+id/q2a4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a4" />
            </LinearLayout>
            <!--Question 2 end -->
            <!--Question 3 start -->
            <LinearLayout
                style="@style/questionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question3"
                    style="@style/question"
                    android:text="@string/q3" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q3a1"
                        style="@style/answer"
                        android:text="@string/q3a1" />

                    <RadioButton
                        android:id="@+id/q3a2"
                        style="@style/answer"
                        android:text="@string/q3a2" />

                    <RadioButton
                        android:id="@+id/q3a3"
                        style="@style/answer"
                        android:text="@string/q3a3" />
                </RadioGroup>
            </LinearLayout>
            <!--Question 3 end -->
            <!--Question 4 start -->
            <LinearLayout
                style="@style/questionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question4"
                    style="@style/question"
                    android:text="@string/q4" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q4a1"
                        style="@style/answer"
                        android:text="@string/q4a1" />

                    <RadioButton
                        android:id="@+id/q4a2"
                        style="@style/answer"
                        android:text="@string/q4a2" />

                    <RadioButton
                        android:id="@+id/q4a3"
                        style="@style/answer"
                        android:text="@string/q4a3" />
                </RadioGroup>
            </LinearLayout>
            <!--Question 4 end -->
            <!--Question 5 start -->
            <LinearLayout
                style="@style/questionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question5"
                    style="@style/question"
                    android:text="@string/q5" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/q5a1"
                        style="@style/answer"
                        android:text="@string/q5a1" />

                    <RadioButton
                        android:id="@+id/q5a2"
                        style="@style/answer"
                        android:text="@string/q5a2" />

                    <RadioButton
                        android:id="@+id/q5a3"
                        style="@style/answer"
                        android:text="@string/q5a3" />
                </RadioGroup>
            </LinearLayout>
            <!--Question 5 end -->
            <!--submit button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:onClick="submitAnswers"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
